<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/logo_icon_valacro" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/login_name"
        android:layout_margin="15dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_margin="15dp"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_connect"
        android:textAllCaps="false"
        android:layout_margin="15dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/forgotten_password"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:text="@string/button_inscription"
        android:textSize="16sp" android:focusable="true"/>


</LinearLayout>