<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode ="true">

    <include layout="@layout/app_bar_main"/>

    <TextView
        android:id="@+id/textViewTelephoneGeneric"
        android:layout_width="@dimen/_115sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_150sdp"
        android:gravity="center"
        android:text="@string/telephone_generic"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <EditText
        android:id="@+id/textViewTelephone"
        android:layout_width="@dimen/_175sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_3sdp"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_150sdp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/mon_telephone"
        app:layout_constraintLeft_toRightOf="@+id/textViewTelephoneGeneric"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewAdresseGeneric"
        android:layout_width="@dimen/_115sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_12sdp"

        android:gravity="center"
        android:text="@string/adresse_generic"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTelephoneGeneric" />

    <EditText
        android:id="@+id/textViewAdresse"
        android:layout_width="@dimen/_175sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_3sdp"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/mon_adresse"
        app:layout_constraintLeft_toRightOf="@+id/textViewAdresseGeneric"
        app:layout_constraintTop_toBottomOf="@+id/textViewTelephone"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewCodePostalGeneric"
        android:layout_width="@dimen/_115sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/code_postal_generic"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdresseGeneric" />

    <EditText
        android:id="@+id/textViewCodePostal"
        android:layout_width="@dimen/_175sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_3sdp"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/mon_code_postal"
        app:layout_constraintLeft_toRightOf="@+id/textViewCodePostalGeneric"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdresse"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewVilleGeneric"
        android:layout_width="@dimen/_115sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/ville_generic"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCodePostalGeneric" />

    <EditText
        android:id="@+id/textViewVille"
        android:layout_width="@dimen/_175sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_3sdp"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ma_ville"
        app:layout_constraintLeft_toRightOf="@+id/textViewVilleGeneric"
        app:layout_constraintTop_toBottomOf="@+id/textViewCodePostal"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonEditProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_300sdp"
        android:text="Valider modifications"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>